Scripts "finally" refactored. Tested in HPC. Tested in visualization notebooks. May still be minor issues that will be resolved over time

--- a/notebooks/Visualize Copy Number Profiles.ipynb
+++ b/notebooks/Visualize Copy Number Profiles.ipynb
@@ -9,19 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'BiocInstaller' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\bbece\\AppData\\Local\\Temp\\RtmpmYDpeS\\downloaded_packages\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -31,47 +21,64 @@
       "  version of R; see http://bioconductor.org/install\n",
       "BioC_mirror: https://bioconductor.org\n",
       "Using Bioconductor 3.6 (BiocInstaller 1.28.0), R 3.4.3 (2017-11-30).\n",
-      "Installing package(s) 'gtrellis'\n",
-      "also installing the dependencies 'GenomeInfoDbData', 'zlibbioc', 'BiocGenerics', 'S4Vectors', 'GenomeInfoDb', 'XVector', 'GlobalOptions', 'shape', 'rjson', 'IRanges', 'GenomicRanges', 'circlize', 'GetoptLong'\n",
-      "\n"
+      "Installing package(s) 'gtrellis'\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "package 'zlibbioc' successfully unpacked and MD5 sums checked\n",
-      "package 'BiocGenerics' successfully unpacked and MD5 sums checked\n",
-      "package 'S4Vectors' successfully unpacked and MD5 sums checked\n",
-      "package 'GenomeInfoDb' successfully unpacked and MD5 sums checked\n",
-      "package 'XVector' successfully unpacked and MD5 sums checked\n",
-      "package 'GlobalOptions' successfully unpacked and MD5 sums checked\n",
-      "package 'shape' successfully unpacked and MD5 sums checked\n",
-      "package 'rjson' successfully unpacked and MD5 sums checked\n",
-      "package 'IRanges' successfully unpacked and MD5 sums checked\n",
-      "package 'GenomicRanges' successfully unpacked and MD5 sums checked\n",
-      "package 'circlize' successfully unpacked and MD5 sums checked\n",
-      "package 'GetoptLong' successfully unpacked and MD5 sums checked\n",
       "package 'gtrellis' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\bbece\\AppData\\Local\\Temp\\RtmpmYDpeS\\downloaded_packages\n"
+      "\tC:\\Users\\bbece\\AppData\\Local\\Temp\\RtmpqAKZYK\\downloaded_packages\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "installing the source package 'GenomeInfoDbData'\n",
-      "\n",
       "Old packages: 'BH', 'bindr', 'bindrcpp', 'bit', 'blob', 'broom', 'callr',\n",
       "  'car', 'caret', 'clipr', 'cluster', 'config', 'curl', 'CVST', 'data.table',\n",
       "  'DBI', 'dbplyr', 'ddalpha', 'digest', 'dplyr', 'DRR', 'forcats', 'foreign',\n",
       "  'ggplot2', 'gistr', 'glmnet', 'haven', 'hexbin', 'highr', 'hms',\n",
-      "  'htmlwidgets', 'httpuv', 'IRdisplay', 'kernlab', 'knitr', 'lava', 'lme4',\n",
-      "  'lubridate', 'maps', 'MASS', 'Matrix', 'mgcv', 'miniUI', 'modelr',\n",
-      "  'mongolite', 'munsell', 'nlme', 'odbc', 'openssl', 'packrat', 'pbdZMQ',\n",
-      "  'pillar', 'plogr', 'prodlim', 'profvis', 'pryr', 'psych', 'purrr',\n",
+      "  'htmlwidgets', 'httpuv', 'IRdisplay', 'iterators', 'kernlab', 'knitr',\n",
+      "  'lava', 'lme4', 'lubridate', 'maps', 'MASS', 'Matrix', 'mgcv', 'miniUI',\n",
+      "  'modelr', 'mongolite', 'munsell', 'nlme', 'odbc', 'openssl', 'packrat',\n",
+      "  'pbdZMQ', 'pillar', 'plogr', 'prodlim', 'profvis', 'pryr', 'psych', 'purrr',\n",
+      "  'quantmod', 'quantreg', 'randomForest', 'Rcpp', 'RcppEigen', 'RcppRoll',\n",
+      "  'RCurl', 'readxl', 'recipes', 'repr', 'reprex', 'rJava', 'RJDBC', 'rlang',\n",
+      "  'rmarkdown', 'robustbase', 'rpart', 'rprojroot', 'rsconnect', 'selectr',\n",
+      "  'sfsmisc', 'shiny', 'sourcetools', 'sparklyr', 'stringi', 'stringr',\n",
+      "  'survival', 'tibble', 'tidyr', 'tidyselect', 'timeDate', 'TTR', 'utf8',\n",
+      "  'viridisLite', 'withr', 'xml2', 'xts', 'yaml', 'zoo'\n",
+      "BioC_mirror: https://bioconductor.org\n",
+      "Using Bioconductor 3.6 (BiocInstaller 1.28.0), R 3.4.3 (2017-11-30).\n",
+      "Installing package(s) 'ComplexHeatmap'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'ComplexHeatmap' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\bbece\\AppData\\Local\\Temp\\RtmpqAKZYK\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Old packages: 'BH', 'bindr', 'bindrcpp', 'bit', 'blob', 'broom', 'callr',\n",
+      "  'car', 'caret', 'clipr', 'cluster', 'config', 'curl', 'CVST', 'data.table',\n",
+      "  'DBI', 'dbplyr', 'ddalpha', 'digest', 'dplyr', 'DRR', 'forcats', 'foreign',\n",
+      "  'ggplot2', 'gistr', 'glmnet', 'haven', 'hexbin', 'highr', 'hms',\n",
+      "  'htmlwidgets', 'httpuv', 'IRdisplay', 'iterators', 'kernlab', 'knitr',\n",
+      "  'lava', 'lme4', 'lubridate', 'maps', 'MASS', 'Matrix', 'mgcv', 'miniUI',\n",
+      "  'modelr', 'mongolite', 'munsell', 'nlme', 'odbc', 'openssl', 'packrat',\n",
+      "  'pbdZMQ', 'pillar', 'plogr', 'prodlim', 'profvis', 'pryr', 'psych', 'purrr',\n",
       "  'quantmod', 'quantreg', 'randomForest', 'Rcpp', 'RcppEigen', 'RcppRoll',\n",
       "  'RCurl', 'readxl', 'recipes', 'repr', 'reprex', 'rJava', 'RJDBC', 'rlang',\n",
       "  'rmarkdown', 'robustbase', 'rpart', 'rprojroot', 'rsconnect', 'selectr',\n",
@@ -94,14 +101,93 @@
     "### Install source libraries\n",
     "\n",
     "* __cnProfileVisualizationLibrary.R__ - contains visualization methods\n",
-    "* __helperFunctions.R__ - contains cd methods\n"
+    "* __helperFunctions.R__ - contains utility methods\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: grid\n",
+      "Loading required package: IRanges\n",
+      "Loading required package: BiocGenerics\n",
+      "Loading required package: parallel\n",
+      "\n",
+      "Attaching package: 'BiocGenerics'\n",
+      "\n",
+      "The following objects are masked from 'package:parallel':\n",
+      "\n",
+      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
+      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
+      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    IQR, mad, sd, var, xtabs\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    anyDuplicated, append, as.data.frame, cbind, colMeans, colnames,\n",
+      "    colSums, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
+      "    grepl, intersect, is.unsorted, lapply, lengths, Map, mapply, match,\n",
+      "    mget, order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
+      "    rbind, Reduce, rowMeans, rownames, rowSums, sapply, setdiff, sort,\n",
+      "    table, tapply, union, unique, unsplit, which, which.max, which.min\n",
+      "\n",
+      "Loading required package: S4Vectors\n",
+      "Loading required package: stats4\n",
+      "\n",
+      "Attaching package: 'S4Vectors'\n",
+      "\n",
+      "The following object is masked from 'package:base':\n",
+      "\n",
+      "    expand.grid\n",
+      "\n",
+      "Loading required package: GenomicRanges\n",
+      "Warning message:\n",
+      "\"package 'GenomicRanges' was built under R version 3.4.4\"Loading required package: GenomeInfoDb\n",
+      "========================================\n",
+      "gtrellis version 1.11.1\n",
+      "Bioconductor page: http://bioconductor.org/packages/gtrellis/\n",
+      "Github page: https://github.com/jokergoo/gtrellis\n",
+      "Documentation: http://bioconductor.org/packages/gtrellis/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. gtrellis: an R/Bioconductor package for making genome-level \n",
+      "  Trellis graphics. BMC Bioinformatics 2016.\n",
+      "========================================\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'circlize' was built under R version 3.4.4\"========================================\n",
+      "circlize version 0.4.4\n",
+      "CRAN page: https://cran.r-project.org/package=circlize\n",
+      "Github page: https://github.com/jokergoo/circlize\n",
+      "Documentation: http://jokergoo.github.io/circlize_book/book/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. circlize implements and enhances circular visualization \n",
+      "  in R. Bioinformatics 2014.\n",
+      "========================================\n",
+      "\n",
+      "========================================\n",
+      "ComplexHeatmap version 1.17.1\n",
+      "Bioconductor page: http://bioconductor.org/packages/ComplexHeatmap/\n",
+      "Github page: https://github.com/jokergoo/ComplexHeatmap\n",
+      "Documentation: http://bioconductor.org/packages/ComplexHeatmap/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. Complex heatmaps reveal patterns and correlations in multidimensional \n",
+      "  genomic data. Bioinformatics 2016.\n",
+      "========================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "setwd(\"~/Documents/Git-Projects/Git-Research-Projects/drug-response-prediction\")\n",
     "source(\"cnProfileVisualizationLibrary.R\")\n",
@@ -121,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,18 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"C:/Users/bbece/Documents\"\n"
+     ]
+    }
+   ],
    "source": [
-    "cd_doc()    \n",
+    "setwd(\"~/Documents\")\n",
+    "print(getwd())\n",
     "facets_segment_data <- retrieveFacetsSegments(sample, dir = \"CSHL/Project_TUV_12995_B01_SOM_Targeted.2018-03-02/\")\n",
     "facets_segment_data <- segmentsToBedFormat(facets_segment_data)  \n",
     "\n",
     "facets_snp_data <- retrieveFacetsSnps(sample, dir = \"CSHL/Project_TUV_12995_B01_SOM_Targeted.2018-03-02/\")\n",
     "facets_snp_data <- snpsToBedFormat(facets_snp_data)\n",
     "\n",
-    "cd_local()\n",
+    "setwd(\"~/Documents/Git-Projects/Git-Research-Projects/drug-response-prediction\")\n",
     "facets_segment_clusters <- retrieveFacetsSegmentClusters(sample, dir = \"segClusteringResults/prev_run1/\")\n",
     "facets_segment_clusters <- segmentClustersToBedFormat(facets_segment_clusters)"
    ]
@@ -169,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
