--- a/notebooks/Visualize GMMs from CNprep.ipynb
+++ b/notebooks/Visualize GMMs from CNprep.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WARNING: If sources don't load, manually setwd() to src file location\n",
+    "setwd(\"~/Documents/Git-Projects/Git-Research-Projects/drug-response-prediction\")\n",
     "source(\"helperFunctions.R\")\n",
     "source(\"visualizeGMMLibrary.R\")"
    ]
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
    ],
    "source": [
     "for(sample in sample_list){\n",
-    "    cd_local()\n",
+    "    setwd(\"~/Documents/Git-Projects/Git-Research-Projects/drug-response-prediction\")\n",
     "    segtable_mclust_V <- retrieveSegtable(sample, dir = \"segClusteringResults/prev_run3/\")\n",
     "    displayGMM(segtable = segtable_mclust_V, sample = sample, print = TRUE, save = FALSE)\n",
     "}"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
    ],
    "source": [
     "for(sample in sample_list){\n",
-    "    cd_local()\n",
+    "    setwd(\"~/Documents/Git-Projects/Git-Research-Projects/drug-response-prediction\")\n",
     "    segtable_mclust_E <- retrieveSegtable(sample, dir = \"segClusteringResults/prev_run1/\")\n",
     "    displayGMM(segtable = segtable_mclust_E, sample = sample, print = TRUE, save = FALSE)\n",
     "}"
