Created Jupyter notebook to visualize TCGA FACETS profile

--- a/notebooks/Visualize TCGA Results.ipynb
+++ b/notebooks/Visualize TCGA Results.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Visualize FACETS results on TCGA dataset\n",
+    "\n",
+    "In this notebook, we will see the results of FACETS on the TCGA dataset, specifically to see how well FACETS performs on non-matching sequences.\n",
+    "\n",
+    "FACETS is an allele specific copy number analysis tool, therefore it performs analysis directly on SNPs. Although, FACETS requires that the tumor and normal sequence be from the same profile, so that the SNPs can be compared. However, our WES dataset does not provide matching normal sequences for each patient-derived tumor organoid. To see if FACETS is feasibly for calculating logR values, we will use the TCGA dataset to validate FACETS performance since the TCGA dataset provides matching normal sequences for multiple tumor patients."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Install appropriate source libraries"
    ]
   },
@@ -206,6 +217,63 @@
     "    visualizeCNProfile(title = paste0(\"Profile for tumorId = \", tumorId), facets_segment_data = bed, Acores = Acores, Dcores = Dcores, save = FALSE)\n",
     "}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in retrieveFacetsSegmentsFromObject(tumorId, tumorId, fitPrefix = \"facetsG5Fit_\", : could not find function \"retrieveFacetsSegmentsFromObject\"\n",
+     "execution_count": 1,
+     "output_type": "error",
+     "traceback": [
+      "Error in retrieveFacetsSegmentsFromObject(tumorId, tumorId, fitPrefix = \"facetsG5Fit_\", : could not find function \"retrieveFacetsSegmentsFromObject\"\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "tumorId <- 7\n",
+    "\n",
+    "setwd(paste0(\"~/Documents/Git-Projects/Git-Research-Projects/FACETS_nonmatching_test/output\"))\n",
+    "raw_segments <- retrieveFacetsSegmentsFromObject(tumorId, tumorId, fitPrefix = \"facetsG5Fit_\", dir = \"prev_run_4/\") # Get matching tumor-normal pair \n",
+    "bed <- segmentsToBedFormat(raw_segments)\n",
+    "\n",
+    "setwd(paste0(\"~/Documents/Git-Projects/Git-Research-Projects/FACETS_nonmatching_test/cores\"))\n",
+    "Acores <- read.table(paste0(\"AcoresBP_t\", tumorId, \".bed\"), header = FALSE, sep = \"\\t\") \n",
+    "Dcores <- read.table(paste0(\"DcoresBP_t\", tumorId, \".bed\"), header = FALSE, sep = \"\\t\") \n",
+    "visualizeCNProfile(title = paste0(\"Profile for tumorId = \", tumorId), facets_segment_data = bed, Acores = Acores, Dcores = Dcores, save = FALSE)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in library(facets): there is no package called 'facets'\n",
+     "execution_count": 2,
+     "output_type": "error",
+     "traceback": [
+      "Error in library(facets): there is no package called 'facets'\nTraceback:\n",
+      "1. library(facets)",
+      "2. stop(txt, domain = NA)"
+     ]
+    }
+   ],
+   "source": [
+    "library(facets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
