Added more documentation to notebooks. Fixed visualization in TCGA Variation Visualization - accidentally visualized SD instead of RMSE for second section.

--- a/notebooks/Visualize CORE TCGA Results.ipynb
+++ b/notebooks/Visualize CORE TCGA Results.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize FACETS results on TCGA dataset\n",
+    "# Visualize CORES of FACETS results on TCGA dataset\n",
     "\n",
     "In this notebook, we will see the results of FACETS on the TCGA dataset, specifically to see how well FACETS performs on non-matching sequences.\n",
     "\n",
