Added documentation to notebook

--- a/notebooks/Visualize GMMs from CNprep.ipynb
+++ b/notebooks/Visualize GMMs from CNprep.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "### Display GMM for mclust model E, minjoin = 1.00, ntrial = 10\n",
     "\n",
-    "Here, we are running the GMM model using the mclust model \"E\", which is fitting Gaussian components with equal variance. We also using a high minjoin of 1.00 to avoid joining clusters. The GMM is very similar to smaller minjoin runs, although there are instances of extra components."
+    "Here, we are running the GMM model using the mclust model \"E\", which is fitting Gaussian components with equal variance. We also using a high minjoin of 1.00 to avoid joining clusters. The GMM is very similar to smaller minjoin runs, although there are instances of extra components. The component added seems reasonable to include."
    ]
   },
   {
