Organization visualization script - made notebooks

--- a/notebooks/Visualize GMMs from CNprep.ipynb
+++ b/notebooks/Visualize GMMs from CNprep.ipynb
@@ -38,16 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display GMM for mclust model E, minjoin = 0.25, mintrial = 10\n",
-    "\n",
-    "We are using the default GMM parameters: mclust model E, minjoin 0.25, ntrial 10, etc.\n",
-    "\n",
-    "The GMM model performs well. Only issue is the potentially misclassification of the segments at logR = ~2. Potentially by increasing minjoin or using the mclust V model, we can fix this."
+    "### View segment input histogram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -123,6 +119,17 @@
     "    seginput <- retrieveSeginput(sample, dir = \"segInputs/\")\n",
     "    displaySeginputHistogram(seginput = seginput, sample = sample, print = TRUE, save = FALSE)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display GMM for mclust model E, minjoin = 0.25, mintrial = 10\n",
+    "\n",
+    "We are using the default GMM parameters: mclust model E, minjoin 0.25, ntrial 10, etc.\n",
+    "\n",
+    "The GMM model performs well. Only issue is the potentially misclassification of the segments at logR = ~2. Potentially by increasing minjoin or using the mclust V model, we can fix this."
    ]
   },
   {
