ML refactoring - parallelized CNprep on interactive script
-Need to also modify the CNprep scripts on HPC

--- a/notebooks/Compare CNPrep Runs.ipynb
+++ b/notebooks/Compare CNPrep Runs.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,27 +75,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     dir model minjoin ntrial\n",
-      "1              prev_run1     E    0.25     10\n",
-      "2              prev_run3     V    0.25     10\n",
-      "3  prev_run_7_15_2018_14     E    0.25     40\n",
-      "4  prev_run_7_15_2018_15     E    0.25     10\n",
-      "5  prev_run_7_15_2018_16     V    0.25     10\n",
-      "6  prev_run_7_15_2018_17     E    0.01     10\n",
-      "7  prev_run_7_15_2018_18     V    0.01     10\n",
-      "8  prev_run_7_15_2018_19     E    0.01     50\n",
-      "9  prev_run_7_15_2018_18     V    0.01     50\n",
-      "10 prev_run_7_15_2018_18     V    0.01     50\n",
-      "11  prev_run_7_19_2018_1     E    0.50     40\n",
-      "12  prev_run_7_19_2018_2     E    1.00     40\n",
-      "13  prev_run_7_19_2018_3     V    1.00     10\n"
+      "                           dir model minjoin ntrial\n",
+      "1                    prev_run1     E    0.25     10\n",
+      "2                    prev_run3     V    0.25     10\n",
+      "3        prev_run_7_15_2018_14     E    0.25     40\n",
+      "4        prev_run_7_15_2018_15     E    0.25     10\n",
+      "5        prev_run_7_15_2018_16     V    0.25     10\n",
+      "6        prev_run_7_15_2018_17     E    0.01     10\n",
+      "7        prev_run_7_15_2018_18     V    0.01     10\n",
+      "8        prev_run_7_15_2018_19     E    0.01     50\n",
+      "9        prev_run_7_15_2018_18     V    0.01     50\n",
+      "10       prev_run_7_15_2018_18     V    0.01     50\n",
+      "11        prev_run_7_19_2018_1     E    0.50     40\n",
+      "12        prev_run_7_19_2018_2     E    1.00     40\n",
+      "13        prev_run_7_19_2018_3     V    1.00     10\n",
+      "14        prev_run_7_27_2018_3     E    0.25     10\n",
+      "15        prev_run_7_27_2018_4     E    0.25     10\n",
+      "16        prev_run_7_27_2018_8     E    0.25     10\n",
+      "17 cnvkit_prev_run_7_30_2018_1     E    0.25     10\n",
+      "18 cnvkit_prev_run_7_30_2018_2     E    0.50     10\n",
+      "19 cnvkit_prev_run_7_30_2018_3     E    1.00     10\n",
+      "20 cnvkit_prev_run_7_30_2018_4     V    0.25     10\n",
+      "21 cnvkit_prev_run_7_30_2018_5     V    0.50     10\n",
+      "22 cnvkit_prev_run_7_30_2018_6     V    1.00     10\n"
      ]
     }
    ],
